# matching-engine

./: .gitignore  Cargo.toml  README.md
examples/: rbdb_example.rs  redb_example.rs
src/: lib.rs  matching_engine.rs  models.rs  order_book.rs  order_queue.rs
src/matching_engine/: failure.rs  mod.rs  output.rs
src/model/: asset_pair.rs  mod.rs  order.rs  order_id.rs  order_request.rs  order_type.rs  price.rs  quantity.rs  time_in_force.rs  trailing_delta.rs
src/models/: order.rs  order_id.rs  order_type.rs  quantity.rs
src/order_book/: failure.rs  output.rs
src/order_queue/: elements.rs
src/repository/: limit_order.rs  market_price.rs  mod.rs  pending_stop_order.rs
