[package]
name = "matching-engine"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@sencoinex.com>"]
license = "MIT"
repository = "https://github.com/sencoinex/matching-engine"
edition = "2021"

[dev-dependencies]
ulid = "1.0.0"
redb = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2.0"
rust_decimal = "1.27.0"

[[example]]
name = "redb_example"
